# skirvy-odds

./: COPYRIGHT  README.md  bldDckrImg.sh  runDckrImg.sh  skirvy-odds.cabal  stack.yaml
app/: Main.hs
src/Skirvy/Odds/: Calculator.hs  Web.hs
test/: Spec.hs
web-assets/: chart.js  index.html  main.js
