name:                skirvy-odds
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ojplg/skirvy-odds
license:             GPL3
license-file:        LICENSE
author:              Oliver Gugenheim
maintainer:          lees@ripco.com
copyright:           2017 Oliver Gugenheim
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Skirvy.Odds.Web, Skirvy.Odds.Calculator
  build-depends:       base >= 4.7 && < 5
                     , happstack-server
                     , containers
                     , blaze-html
  default-language:    Haskell2010

executable skirvy-odds-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , skirvy-odds
                     , blaze-html
  default-language:    Haskell2010

test-suite skirvy-odds-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , skirvy-odds
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ojplg/skirvy-odds
